# jina_read

./: .gitignore  README.md  pyproject.toml
jina_read/: jina_read.py
